--- a/games/lgeneral-data/Makefile
+++ b/games/lgeneral-data/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/07/17 21:39:00 grant Exp $
+# $NetBSD: Makefile,v 1.4 2004/03/08 02:21:24 snj Exp $
 #
 
 DISTNAME=	lgeneral-data-1.1.3
@@ -12,6 +12,6 @@ COMMENT=	Panzer General data files for lgeneral
 DEPENDS+=	lgeneral>=1.1.1:../../games/lgeneral
 
 GNU_CONFIGURE=	YES
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 
 .include "../../mk/bsd.pkg.mk"
