--- a/games/tanked/Makefile
+++ b/games/tanked/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2002/10/21 12:11:03 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/08 02:20:09 snj Exp $
 #
 
 DISTNAME=		tanked-0.90
@@ -10,7 +10,7 @@ MAINTAINER=		root@garbled.net
 COMMENT=		Multiplayer internet tank game for X11
 
 USE_X11BASE=		YES
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 
 post-patch:
 	@${TOUCH} ${WRKSRC}/client/tanked.man
@@ -18,5 +18,5 @@ post-patch:
 	@${SED} -e 's@XXX@${X11PREFIX}/share/tanked/@' \
 		< ${WRKSRC}/server/maps.list.bak > ${WRKSRC}/server/maps.list
 
-.include "../../graphics/xpm/buildlink2.mk"
+.include "../../graphics/xpm/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
