--- a/games/dopewars/Makefile
+++ b/games/dopewars/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.23 2004/02/14 17:21:40 jlam Exp $
+# $NetBSD: Makefile,v 1.24 2004/03/08 02:32:31 snj Exp $
 
 DISTNAME=		dopewars-1.5.9
 PKGREVISION=		2
@@ -11,7 +11,7 @@ MAINTAINER=		root@garbled.net
 HOMEPAGE=		http://bellatrix.pcl.ox.ac.uk/~ben/dopewars/
 COMMENT=		Make a fortune dealing drugs on the streets of New York
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 USE_LIBTOOL=		YES
 USE_PKGLOCALEDIR=	YES
 USE_GNU_TOOLS+=		make
@@ -27,7 +27,7 @@ CONFIGURE_ARGS+=	--localstatedir=/var/games
 
 USE_NCURSES=		# KEY_RESIZE
 
-.include "../../devel/gettext-lib/buildlink2.mk"
-.include "../../devel/glib/buildlink2.mk"
-.include "../../devel/ncurses/buildlink2.mk"
+.include "../../devel/gettext-lib/buildlink3.mk"
+.include "../../devel/glib/buildlink3.mk"
+.include "../../devel/ncurses/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
