--- a/games/gnuchess-book-small/Makefile
+++ b/games/gnuchess-book-small/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2004/01/20 12:15:40 agc Exp $
+# $NetBSD: Makefile,v 1.11 2004/03/08 06:09:40 minskim Exp $
 
 DISTNAME=		small
 PKGNAME=		${CHESS_ENGINE}-book-${DISTNAME}-20000511
+PKGREVISION=		1
 CATEGORIES=		games
 MASTER_SITES=		ftp://ftp.cis.uab.edu/pub/hyatt/common/${DISTNAME}/
 EXTRACT_SUFX=		.zip
@@ -9,9 +10,9 @@ EXTRACT_SUFX=		.zip
 MAINTAINER=		jlam@NetBSD.org
 COMMENT=		Chess opening book for GNU Chess (small)
 
-DEPENDS+=		gnuchess>=5.00nb1:../../games/gnuchess
+DEPENDS+=		gnuchess>=5.07:../../games/gnuchess
 
-CONFLICTS=		${CHESS_ENGINE}-book-[0-9]*
+CONFLICTS=		${CHESS_ENGINE}-book-*
 
 WRKSRC=			${WRKDIR}
 CHESS_ENGINE=		gnuchess
@@ -26,11 +27,9 @@ PGN_FILE=		${DISTNAME}.txt
 BOOK_FILE=		book.dat
 
 do-build:
-	@${ECHO} ""
-	@${ECHO} "  ** Get yourself a shower and a big mug of coffee,"
-	@${ECHO} "  ** this will take _very_ long!"
-	@${ECHO} ""
-	cd ${WRKSRC} && gnuchess compile ${PGN_FILE} ${BOOK_FILE}
+	@${ECHO} "book add ${PGN_FILE}" > ${WRKSRC}/makebook.gnuchess
+	@${ECHO} "quit" >> ${WRKSRC}/makebook.gnuchess
+	@cd ${WRKSRC} && ${CAT} makebook.gnuchess | ${PREFIX}/bin/gnuchess 
 
 do-install:
 	${INSTALL_DATA_DIR} ${BOOKDIR}
