--- a/net/torrentutils/Makefile
+++ b/net/torrentutils/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/03/04 15:47:34 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2004/03/08 09:06:39 wiz Exp $
 #
 
 DISTNAME=		torrentutils-0.3.0
+PKGREVISION=		1
 CATEGORIES=		net
 MASTER_SITES=		http://www.student.lu.se/~nbi98oli/src/
 
@@ -10,6 +11,7 @@ HOMEPAGE=		http://www.student.lu.se/~nbi98oli/src/
 COMMENT=		Manage BitTorrent files and interact with trackers
 
 DEPENDS+=		p5-Digest-SHA1-[0-9]*:../../security/p5-Digest-SHA1
+DEPENDS+=		p5-Digest-MD5-[0-9]*:../../security/p5-Digest-MD5
 
 USE_BUILDLINK3=		yes
 USE_GNU_TOOLS=		make
