--- a/net/gftp-gtk1/Makefile
+++ b/net/gftp-gtk1/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2003/09/01 21:41:48 xtraeme Exp $
+# $NetBSD: Makefile,v 1.2 2004/03/08 10:11:17 tron Exp $
 
 .include "${.CURDIR}/../gftp/Makefile.common"
 
@@ -13,5 +13,5 @@ CONFIGURE_ARGS+=	--disable-gtk20
 PLIST_SRC=	${.CURDIR}/../gftp/PLIST
 DISTINFO_FILE=	${.CURDIR}/../gftp/distinfo
 
-.include "../../x11/gtk/buildlink2.mk"
+.include "../../x11/gtk/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
