--- a/net/gftp/Makefile.common
+++ b/net/gftp/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.2 2003/12/13 11:49:39 xtraeme Exp $
+# $NetBSD: Makefile.common,v 1.3 2004/03/08 10:11:17 tron Exp $
 
 DISTNAME=	gftp-${VERSION}
 CATEGORIES=	net
@@ -11,7 +11,7 @@ HOMEPAGE=	http://gftp.seul.org/
 
 BUILD_USES_MSGFMT=	yes
 
-USE_BUILDLINK2=		yes
+USE_BUILDLINK3=		yes
 USE_PKGLOCALEDIR=	yes
 GNU_CONFIGURE=		yes
 
@@ -27,9 +27,9 @@ VERSION=		2.0.16
 DEPENDS+=       openssh-[0-9]*:../../security/openssh
 .endif
 
-.include "../../converters/libiconv/buildlink2.mk"
-.include "../../devel/gettext-lib/buildlink2.mk"
-.include "../../devel/readline/buildlink2.mk"
-.include "../../security/openssl/buildlink2.mk"
-.include "../../textproc/intltool/buildlink2.mk"
-.include "../../mk/pthread.buildlink2.mk"
+.include "../../converters/libiconv/buildlink3.mk"
+.include "../../devel/gettext-lib/buildlink3.mk"
+.include "../../devel/readline/buildlink3.mk"
+.include "../../security/openssl/buildlink3.mk"
+.include "../../textproc/intltool/buildlink3.mk"
+.include "../../mk/pthread.buildlink3.mk"
